--- a/CSS-Box-Model/boxes.html
+++ b/CSS-Box-Model/boxes.html
@@ -10,19 +10,12 @@
 
     <p>Paragraphs are blocks, too. <em>However</em>, &lt;em&gt; and &lt;strong&gt;
        elements are not. They are <strong>inline</strong> elements.</p>
-
+       <div style='padding-top: 1px'></div>
     <p>Block elements define the flow of the HTML document, while inline elements
        do not.</p>
 
-   <h3>Block Elements and Inline Elements</h3>
-   <p><img src="../images/blockandinline.jpg" alt="Block Elements and Inline Elements"></p>
-   <br>
-   <p><img src="../images/CPBM.jpg" alt="Content, Padding, Border, Margin">
-     <br>
-     <img src="../images/CPBM1.jpg" alt="Content, Padding, Border, Margin">
-     <br>
-     <img src="../images/CPBM2.jpg" alt="Content, Padding, Border, Margin">
-     <br>
-   </p>
+    <div>Button</div>
+
+
   </body>
 </html>
